footer fix: not covering content in mobile devices and not leaving a gap in login page

--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -162,3 +162,6 @@ form {
     }
   }
 }
+body.login-page .main-content {
+  padding-bottom: 0;
+}
