--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -8,7 +8,7 @@ body {
   display: flex;
   height: 100%;
   flex-direction: column;
-  margin-bottom: 200px;
+  //padding-bottom: 200px;
 }
 
 @font-face {
@@ -17,3 +17,5 @@ body {
   font-weight: normal;
   font-style: normal;
 }
+
+
